# -coursera_cpp_course4

week1/task01_hash_set/: CMakeLists.txt  hash_set.cpp
week1/task02_set_iterator_next/: CMakeLists.txt  set_iterator_next.cpp
week1/task03_hash_point/: CMakeLists.txt  hash_point.cpp
week1/task04_hash_person/: CMakeLists.txt  hash_person.cpp
week1/task05_secondary_index/: CMakeLists.txt  secondary_index.cpp
week2/task01_spendings_xml/: CMakeLists.txt  spendings_xml.cpp
week2/task02_spendings_json/: CMakeLists.txt  spendings_json.cpp
week2/task03_ini/: CMakeLists.txt  ini.cpp  ini.h  test_ini.cpp
week2/task04_refactoring/: CMakeLists.txt  refactoring.cpp
week2/task05_restructuring/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
week2/task06_collide/: CMakeLists.txt  collide.cpp  geo2d.h
week2/task07_comment_server/: CMakeLists.txt  comment_server.cpp  test_runner.h
week3/task01_demographic_stats/: CMakeLists.txt  print_stats_2.cpp
week3/task02_lazy_value/: CMakeLists.txt  lazy_value.cpp
week3/task03_synchronized_2/: CMakeLists.txt  synchronized_2.cpp
week3/task04_concurrent_map_2/: CMakeLists.txt  concurrent_map_2.cpp
week3/task05_polynomial/: CMakeLists.txt  polynomial.cpp  test_runner.h
week3/task06_zoo/: CMakeLists.txt  zoo.cpp
week6/task01_part_e/: CMakeLists.txt  coords.cpp  coords.h  database.cpp  database.h  graph.h  parse_input.cpp  parse_input.h  requests_input.h  requests_read.cpp  requests_read.h  route_query_result.cpp  route_query_result.h  routing_settings.h  task01_part_e.cpp
(+55 files in other folders)
